@@ -57,6 +57,7 @@ Version 0.0.4b (in progress)
 * [Changed] Team rosters are no longer automatically deleted when stats are reset.
 * [Fixed] Raw html was not passed properly to generate_psss_team_rosters function.
 * [Fixed] Stats not updating when run as a scheduled task.
+* [Fixed] Errors when attempting to access division.php directly.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
